Update CORS configuration to support multiple origins